# celtic-knot

./: .gitignore  AUTHORS  COPYING  INSTALL  Makefile.am  Makefile.in  NEWS  README  config.h.in  configure  configure.ac
assets/: Makefile.am  Makefile.in  application.glade  fragment.fs  vertex.vs
debian/: changelog  control  copyright  knot.1  knot3d.1  menu  rules  watch
examples/: Bracelet01.xml  Knot2D.xml  Knot3D.xml  Ring01.xml
linux/: knot.spec  knot3d.spec
src/: Makefile.am  Makefile.in  bez.c  bez.h  celtic.c  celtic.h  celtic2d.c  celtic2d.h  celtic3d.c  celtic3d.h  celtic_private.h  filesave.c  filesave.h  main.c  settings.c  settings.h  shader.c  shader.h  utils.c  utils.h  vecint.c  vecint.h  vis.c  vis.h
windows/: build.bat  buildSetup.bat  knot.wxs
windows/bootstrap/: bootstrap.wxs
windows/wixui/: BrowseDlg.wxs  Common.wxs  DiskCostDlg.wxs  ExitDialog.wxs  InstallDirDlg.wxs  ProgressDlg.wxs  ShortcutDlg.wxs  VerifyReadyDlg.wxs  WixUI_en-us.wxl
windows/wixui/knot/: WixUI_Knot.wxs
