EXTRA_DIST = linux/knot3d.spec windows/*.bat windows/knot.wxs windows/knot.ico windows/bootstrap/bootstrap.wxs windows/bootstrap/knot48.png windows/wixui/*.wxs windows/wixui/CPL.TXT windows/wixui/knot/*.wxs windows/wixui/Bitmaps/*.bmp windows/wixui/Bitmaps/*.ico examples/*.xml debian/changelog debian/compat debian/control debian/copyright debian/docs debian/knot3d.1 debian/menu debian/rules debian/watch

SUBDIRS = src assets
dist_doc_DATA = AUTHORS ChangeLog COPYING INSTALL NEWS README

ChangeLog:
	touch $@

